CREATE TABLE public.asentamientos (
    id integer NOT NULL,
    asentamiento character varying
);


--
-- Name: TABLE asentamientos; Type: COMMENT; Schema: public; Owner: -
--

COMMENT ON TABLE public.asentamientos IS 'Catalogo de nombres de asentamientos (colonias, barrios, etc.)';


--
-- Name: asentamientos_id_seq; Type: SEQUENCE; Schema: public; Owner: -
--

ALTER TABLE public.asentamientos ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.asentamientos_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: batch_job_execution; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.batch_job_execution (
    job_execution_id bigint NOT NULL,
    version bigint,
    job_instance_id bigint NOT NULL,
    create_time timestamp without time zone NOT NULL,
    start_time timestamp without time zone,
    end_time timestamp without time zone,
    status character varying(10),
    exit_code character varying(2500),
    exit_message character varying(2500),
    last_updated timestamp without time zone,
    job_configuration_location character varying(2500)
);


--
-- Name: batch_job_execution_context; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.batch_job_execution_context (
    job_execution_id bigint NOT NULL,
    short_context character varying(2500) NOT NULL,
    serialized_context text
);


--
-- Name: batch_job_execution_params; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.batch_job_execution_params (
    job_execution_id bigint NOT NULL,
    parameter_name character varying(100) NOT NULL,
    parameter_type character varying(100) NOT NULL,
    parameter_value character varying(2500),
    identifying character(1) NOT NULL
);


--
-- Name: batch_job_execution_seq; Type: SEQUENCE; Schema: public; Owner: -
--

CREATE SEQUENCE public.batch_job_execution_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 100;


--
-- Name: batch_job_instance; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.batch_job_instance (
    job_instance_id bigint NOT NULL,
    version bigint,
    job_name character varying(100) NOT NULL,
    job_key character varying(32) NOT NULL
);


--
-- Name: batch_job_seq; Type: SEQUENCE; Schema: public; Owner: -
--

CREATE SEQUENCE public.batch_job_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 100;


--
-- Name: batch_step_execution; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.batch_step_execution (
    step_execution_id bigint NOT NULL,
    version bigint,
    step_name character varying(100),
    job_execution_id bigint NOT NULL,
    start_time timestamp without time zone,
    end_time timestamp without time zone,
    status character varying(10),
    commit_count bigint,
    read_count bigint,
    filter_count bigint,
    write_count bigint,
    read_skip_count bigint,
    write_skip_count bigint,
    process_skip_count bigint,
    rollback_count bigint,
    exit_code character varying(20),
    exit_message character varying(2500),
    last_updated timestamp without time zone,
    create_time timestamp without time zone
);


--
-- Name: batch_step_execution_context; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.batch_step_execution_context (
    step_execution_id bigint NOT NULL,
    short_context character varying(2500) NOT NULL,
    serialized_context text
);


--
-- Name: batch_step_execution_seq; Type: SEQUENCE; Schema: public; Owner: -
--

CREATE SEQUENCE public.batch_step_execution_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 100;


--
-- Name: catalogo_de_tipos_de_asentamientos; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.catalogo_de_tipos_de_asentamientos (
    id smallint NOT NULL,
    clave_de_tipo_de_asentamiento character varying,
    tipo_de_asentamiento character varying
);


--
-- Name: TABLE catalogo_de_tipos_de_asentamientos; Type: COMMENT; Schema: public; Owner: -
--

COMMENT ON TABLE public.catalogo_de_tipos_de_asentamientos IS 'Catalogo de tipos de asentamientos (colonia, condominio, barrio, etc.)';


--
-- Name: catalogo_de_tipos_de_asentamientos_id_seq; Type: SEQUENCE; Schema: public; Owner: -
--

ALTER TABLE public.catalogo_de_tipos_de_asentamientos ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.catalogo_de_tipos_de_asentamientos_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: catalogo_de_zonas; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.catalogo_de_zonas (
    id smallint NOT NULL,
    tipo_de_zona character varying
);


--
-- Name: TABLE catalogo_de_zonas; Type: COMMENT; Schema: public; Owner: -
--

COMMENT ON TABLE public.catalogo_de_zonas IS 'Catalogo de tipos de zonas (rural, urbano o semiurbano)';


--
-- Name: catalogo_de_zonas_id_seq; Type: SEQUENCE; Schema: public; Owner: -
--

ALTER TABLE public.catalogo_de_zonas ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.catalogo_de_zonas_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: ciudades; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.ciudades (
    id integer NOT NULL,
    ciudad character varying
);


--
-- Name: TABLE ciudades; Type: COMMENT; Schema: public; Owner: -
--

COMMENT ON TABLE public.ciudades IS 'Catalogo de nombres de ciudades por ejemplo ciudad de méxico';


--
-- Name: ciudades_id_seq; Type: SEQUENCE; Schema: public; Owner: -
--

ALTER TABLE public.ciudades ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.ciudades_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: claves_oficina; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.claves_oficina (
    id integer NOT NULL,
    clave_oficina character varying,
    d_cp character varying
);


--
-- Name: TABLE claves_oficina; Type: COMMENT; Schema: public; Owner: -
--

COMMENT ON TABLE public.claves_oficina IS 'Claves de oficina que, segun la pagina oficial de correos de mexico esta es la descripcion del campo "Código Postal de la Administración Postal que reparte al asentamiento". Quiero suponer que son las claves de oficinas de los correos que entregan a sus respectivos codigos postales. El campo de "d_cp" es el mismo que "clave_oficina".';


--
-- Name: claves_oficina_id_seq; Type: SEQUENCE; Schema: public; Owner: -
--

ALTER TABLE public.claves_oficina ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.claves_oficina_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: codigos_postales; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.codigos_postales (
    id integer NOT NULL,
    codigo_postal character varying,
    id_oficina integer
);


--
-- Name: TABLE codigos_postales; Type: COMMENT; Schema: public; Owner: -
--

COMMENT ON TABLE public.codigos_postales IS 'Tabla que contiene todos los codigos postales y su relacion de a que oficina pertenece.';


--
-- Name: codigos_postales_id_seq; Type: SEQUENCE; Schema: public; Owner: -
--

ALTER TABLE public.codigos_postales ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.codigos_postales_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: cruce_asentamientos_municipios; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.cruce_asentamientos_municipios (
    id integer NOT NULL,
    id_asentamiento integer,
    id_cruce_estado_municipio integer,
    id_asenta_cpcons character varying,
    id_tipo_de_asentamiento smallint,
    id_zona smallint,
    id_codigo_postal integer
);


--
-- Name: TABLE cruce_asentamientos_municipios; Type: COMMENT; Schema: public; Owner: -
--

COMMENT ON TABLE public.cruce_asentamientos_municipios IS 'Tabla que contiene los datos de todos los asentamientos, que codigo postal tiene, que tipo de zona es, el tipo de asentamiento, el id que maneja el municipio para ese asentamiento, su municipio y su id para relacionarlo con el nombre de asentamiento. Es un cruce ya que su relacion es de muchos a muchos';


--
-- Name: cruce_asentamientos_municipios_id_seq; Type: SEQUENCE; Schema: public; Owner: -
--

ALTER TABLE public.cruce_asentamientos_municipios ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.cruce_asentamientos_municipios_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: cruce_ciudades_municipios; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.cruce_ciudades_municipios (
    id integer NOT NULL,
    clave_ciudad character varying,
    id_ciudad integer,
    id_cruce_estado_municipio integer
);


--
-- Name: TABLE cruce_ciudades_municipios; Type: COMMENT; Schema: public; Owner: -
--

COMMENT ON TABLE public.cruce_ciudades_municipios IS 'Es el cruce de que clave de ciudad le asigno el municipio a la ciudad que pertenece. La relacion es de muchos a muchos por eso es un cruce. Tiene el id_cruce_estado_municipio porque los nombres de municipios se repites, no son unicos asi que para identificar un municipio se debe de hacer no solo por su nombre si no tambie a que estado le pertenece.';


--
-- Name: cruce_ciudades_municipios_id_seq; Type: SEQUENCE; Schema: public; Owner: -
--

ALTER TABLE public.cruce_ciudades_municipios ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.cruce_ciudades_municipios_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: cruce_estados_municipios; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.cruce_estados_municipios (
    id integer NOT NULL,
    id_estado smallint,
    id_municipio integer,
    clave_municipio character varying
);


--
-- Name: TABLE cruce_estados_municipios; Type: COMMENT; Schema: public; Owner: -
--

COMMENT ON TABLE public.cruce_estados_municipios IS 'Cruce de estados municipios, como los nombres se repiten esta tabla enlaza su nombre con su estado para identificar el municipio unico.';


--
-- Name: cruce_estados_municipios_id_seq; Type: SEQUENCE; Schema: public; Owner: -
--

ALTER TABLE public.cruce_estados_municipios ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.cruce_estados_municipios_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: data_text_raw; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.data_text_raw (
    id bigint NOT NULL,
    d_mnpio character varying(255),
    c_cp character varying(255),
    c_cve_ciudad character varying(255),
    c_estado character varying(255),
    c_mnpio character varying(255),
    c_oficina character varying(255),
    c_tipo_asenta character varying(255),
    d_cp character varying(255),
    d_asenta character varying(255),
    d_ciudad character varying(255),
    d_codigo character varying(255),
    d_estado character varying(255),
    d_tipo_asenta character varying(255),
    d_zona character varying(255),
    id_asenta_cpcons character varying(255)
);


--
-- Name: TABLE data_text_raw; Type: COMMENT; Schema: public; Owner: -
--

COMMENT ON TABLE public.data_text_raw IS 'Tabla auxiliar donde se deposita en crudo la informacion descargada de la pagina oficial de mexico: https://www.correosdemexico.gob.mx/sslservicios/consultacp/CodigoPostal_Exportar.aspx';


--
-- Name: data_text_raw_history; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.data_text_raw_history (
    step_execution_id bigint,
    id bigint NOT NULL,
    d_mnpio character varying(255),
    c_cp character varying(255),
    c_cve_ciudad character varying(255),
    c_estado character varying(255),
    c_mnpio character varying(255),
    c_oficina character varying(255),
    c_tipo_asenta character varying(255),
    d_cp character varying(255),
    d_asenta character varying(255),
    d_ciudad character varying(255),
    d_codigo character varying(255),
    d_estado character varying(255),
    d_tipo_asenta character varying(255),
    d_zona character varying(255),
    id_asenta_cpcons character varying(255)
);


--
-- Name: TABLE data_text_raw_history; Type: COMMENT; Schema: public; Owner: -
--

COMMENT ON TABLE public.data_text_raw_history IS 'Historial de la informacion en crudo en cada iteracion del batch.';


--
-- Name: data_text_raw_history_id_seq; Type: SEQUENCE; Schema: public; Owner: -
--

ALTER TABLE public.data_text_raw_history ALTER COLUMN id ADD GENERATED ALWAYS AS IDENTITY (
    SEQUENCE NAME public.data_text_raw_history_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: data_text_raw_id_seq; Type: SEQUENCE; Schema: public; Owner: -
--

ALTER TABLE public.data_text_raw ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.data_text_raw_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: estados; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.estados (
    id smallint NOT NULL,
    clave_de_estado character varying,
    estado character varying
);


--
-- Name: TABLE estados; Type: COMMENT; Schema: public; Owner: -
--

COMMENT ON TABLE public.estados IS 'Catalogo de todos los estados de mexico.';


--
-- Name: estados_id_seq; Type: SEQUENCE; Schema: public; Owner: -
--

ALTER TABLE public.estados ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.estados_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: municipios; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.municipios (
    id integer NOT NULL,
    municipio character varying
);


--
-- Name: TABLE municipios; Type: COMMENT; Schema: public; Owner: -
--

COMMENT ON TABLE public.municipios IS 'Catalogo de todos los nombres de municipios';


--
-- Name: municipios_id_seq; Type: SEQUENCE; Schema: public; Owner: -
--

ALTER TABLE public.municipios ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.municipios_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: asentamientos asentamientos_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.asentamientos
    ADD CONSTRAINT asentamientos_pkey PRIMARY KEY (id);


--
-- Name: batch_job_execution_context batch_job_execution_context_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.batch_job_execution_context
    ADD CONSTRAINT batch_job_execution_context_pkey PRIMARY KEY (job_execution_id);


--
-- Name: batch_job_execution batch_job_execution_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.batch_job_execution
    ADD CONSTRAINT batch_job_execution_pkey PRIMARY KEY (job_execution_id);


--
-- Name: batch_job_instance batch_job_instance_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.batch_job_instance
    ADD CONSTRAINT batch_job_instance_pkey PRIMARY KEY (job_instance_id);


--
-- Name: batch_step_execution_context batch_step_execution_context_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.batch_step_execution_context
    ADD CONSTRAINT batch_step_execution_context_pkey PRIMARY KEY (step_execution_id);


--
-- Name: batch_step_execution batch_step_execution_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.batch_step_execution
    ADD CONSTRAINT batch_step_execution_pkey PRIMARY KEY (step_execution_id);


--
-- Name: catalogo_de_tipos_de_asentamientos catalogo_de_tipos_de_asentamientos_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.catalogo_de_tipos_de_asentamientos
    ADD CONSTRAINT catalogo_de_tipos_de_asentamientos_pkey PRIMARY KEY (id);


--
-- Name: catalogo_de_zonas catalogo_de_zonas_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.catalogo_de_zonas
    ADD CONSTRAINT catalogo_de_zonas_pkey PRIMARY KEY (id);


--
-- Name: ciudades ciudades_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.ciudades
    ADD CONSTRAINT ciudades_pkey PRIMARY KEY (id);


--
-- Name: claves_oficina claves_oficina_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.claves_oficina
    ADD CONSTRAINT claves_oficina_pkey PRIMARY KEY (id);


--
-- Name: codigos_postales codigos_postales_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.codigos_postales
    ADD CONSTRAINT codigos_postales_pkey PRIMARY KEY (id);


--
-- Name: cruce_asentamientos_municipios cruce_asentamientos_municipios_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.cruce_asentamientos_municipios
    ADD CONSTRAINT cruce_asentamientos_municipios_pkey PRIMARY KEY (id);


--
-- Name: cruce_ciudades_municipios cruce_ciudades_municipios_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.cruce_ciudades_municipios
    ADD CONSTRAINT cruce_ciudades_municipios_pkey PRIMARY KEY (id);


--
-- Name: cruce_estados_municipios cruce_estados_municipios_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.cruce_estados_municipios
    ADD CONSTRAINT cruce_estados_municipios_pkey PRIMARY KEY (id);


--
-- Name: data_text_raw_history data_text_raw_history_pk; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.data_text_raw_history
    ADD CONSTRAINT data_text_raw_history_pk PRIMARY KEY (id);


--
-- Name: data_text_raw data_text_raw_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.data_text_raw
    ADD CONSTRAINT data_text_raw_pkey PRIMARY KEY (id);


--
-- Name: estados estados_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.estados
    ADD CONSTRAINT estados_pkey PRIMARY KEY (id);


--
-- Name: batch_job_instance job_inst_un; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.batch_job_instance
    ADD CONSTRAINT job_inst_un UNIQUE (job_name, job_key);


--
-- Name: municipios municipios_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.municipios
    ADD CONSTRAINT municipios_pkey PRIMARY KEY (id);


--
-- Name: codigos_postales codigos_postales; Type: FK CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.codigos_postales
    ADD CONSTRAINT codigos_postales FOREIGN KEY (id_oficina) REFERENCES public.claves_oficina(id);


--
-- Name: cruce_asentamientos_municipios cruce_asentamientos_municipios; Type: FK CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.cruce_asentamientos_municipios
    ADD CONSTRAINT cruce_asentamientos_municipios FOREIGN KEY (id_asentamiento) REFERENCES public.asentamientos(id);


--
-- Name: cruce_asentamientos_municipios cruce_asentamientos_municipios2; Type: FK CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.cruce_asentamientos_municipios
    ADD CONSTRAINT cruce_asentamientos_municipios2 FOREIGN KEY (id_cruce_estado_municipio) REFERENCES public.cruce_estados_municipios(id);


--
-- Name: cruce_asentamientos_municipios cruce_asentamientos_municipios3; Type: FK CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.cruce_asentamientos_municipios
    ADD CONSTRAINT cruce_asentamientos_municipios3 FOREIGN KEY (id_tipo_de_asentamiento) REFERENCES public.catalogo_de_tipos_de_asentamientos(id);


--
-- Name: cruce_asentamientos_municipios cruce_asentamientos_municipios4; Type: FK CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.cruce_asentamientos_municipios
    ADD CONSTRAINT cruce_asentamientos_municipios4 FOREIGN KEY (id_zona) REFERENCES public.catalogo_de_zonas(id);


--
-- Name: cruce_asentamientos_municipios cruce_asentamientos_municipios5; Type: FK CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.cruce_asentamientos_municipios
    ADD CONSTRAINT cruce_asentamientos_municipios5 FOREIGN KEY (id_codigo_postal) REFERENCES public.codigos_postales(id);


--
-- Name: cruce_ciudades_municipios cruce_ciudades_municipios; Type: FK CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.cruce_ciudades_municipios
    ADD CONSTRAINT cruce_ciudades_municipios FOREIGN KEY (id_cruce_estado_municipio) REFERENCES public.cruce_estados_municipios(id);


--
-- Name: cruce_ciudades_municipios cruce_ciudades_municipios2; Type: FK CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.cruce_ciudades_municipios
    ADD CONSTRAINT cruce_ciudades_municipios2 FOREIGN KEY (id_ciudad) REFERENCES public.ciudades(id);


--
-- Name: cruce_estados_municipios cruce_estados_municipios; Type: FK CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.cruce_estados_municipios
    ADD CONSTRAINT cruce_estados_municipios FOREIGN KEY (id_estado) REFERENCES public.estados(id);


--
-- Name: cruce_estados_municipios cruce_estados_municipios2; Type: FK CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.cruce_estados_municipios
    ADD CONSTRAINT cruce_estados_municipios2 FOREIGN KEY (id_municipio) REFERENCES public.municipios(id);


--
-- Name: data_text_raw_history data_text_raw_history_batch_step_execution_fk; Type: FK CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.data_text_raw_history
    ADD CONSTRAINT data_text_raw_history_batch_step_execution_fk FOREIGN KEY (step_execution_id) REFERENCES public.batch_step_execution(step_execution_id);


--
-- Name: batch_job_execution_context job_exec_ctx_fk; Type: FK CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.batch_job_execution_context
    ADD CONSTRAINT job_exec_ctx_fk FOREIGN KEY (job_execution_id) REFERENCES public.batch_job_execution(job_execution_id);


--
-- Name: batch_job_execution_params job_exec_params_fk; Type: FK CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.batch_job_execution_params
    ADD CONSTRAINT job_exec_params_fk FOREIGN KEY (job_execution_id) REFERENCES public.batch_job_execution(job_execution_id);


--
-- Name: batch_step_execution job_exec_step_fk; Type: FK CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.batch_step_execution
    ADD CONSTRAINT job_exec_step_fk FOREIGN KEY (job_execution_id) REFERENCES public.batch_job_execution(job_execution_id);


--
-- Name: batch_job_execution job_inst_exec_fk; Type: FK CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.batch_job_execution
    ADD CONSTRAINT job_inst_exec_fk FOREIGN KEY (job_instance_id) REFERENCES public.batch_job_instance(job_instance_id);


--
-- PostgreSQL database dump complete
--